# pipecat-voice-engine-poc

./: agents.py  asterisk_agent.py  asterisk_stasis_transport.py  audiosocket_transport.py  list_pyaudio_devices.py  local_agent.py  main.py  pyproject.toml  serializer.py  stasis_server.py  test_audio_output.py  transport.py
